<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorWhite"
            android:paddingBottom="@dimen/dp_20">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/tvSelect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:maxLines="1"
                    android:paddingStart="@dimen/dp_15"
                    android:paddingEnd="@dimen/dp_15"
                    android:paddingTop="@dimen/dp_8"
                    android:paddingBottom="@dimen/dp_8"
                    android:text="@string/skip"
                    android:textColor="@color/colorLogOut"
                    android:textSize="14dp"
                    app:font="@{`lato_regular`}" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/dp_10"
                android:src="@drawable/logo_yod" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_20"
                        android:layout_marginEnd="@dimen/dp_20"
                        android:padding="0dp"
                        android:text="@string/phone_number"
                        android:textColor="@color/colorLogOut"
                        android:textSize="14dp"
                        android:visibility="visible"
                        app:font="@{`lato_regular`}" />

                    <EditText
                        android:cursorVisible="true"
                        android:id="@+id/edtPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_2"
                        android:layout_marginStart="@dimen/dp_20"
                        android:layout_marginEnd="@dimen/dp_20"
                        android:background="@null"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:maxLength="15"
                        android:maxLines="1"
                        android:scrollHorizontally="true"
                        android:text="9812345670"
                        android:textSize="14dp"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorBlack"
                        app:font="@{`lato_regular`}" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:background="@color/colorLightGrey" />

                <EditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_22"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:background="@null"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="14dp"
                    app:font="@{`lato_regular`}" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginEnd="@dimen/dp_20"
                android:background="@color/colorLightGrey" />


            <TextView
                android:id="@+id/tvForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginEnd="@dimen/dp_30"
                android:text="@string/forgot_password"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:textSize="14dp"
                app:font="@{`lato_bold`}" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"
                android:background="@drawable/drawable_gradient_solid_corner"
                android:padding="@dimen/dp_0"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="14dp"
                app:font="@{`lato_bold`}" />


            <TextView
                android:id="@+id/tvOR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/or"
                android:textColor="@color/colorLogOut"
                android:textSize="14dp"
                app:font="@{`lato_regular`}" />


            <TextView
                android:id="@+id/tvLoginUsingOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/log_in_using_otp"
                android:textColor="@color/colorLogOut"
                android:textSize="14dp"
                app:font="@{`lato_regular`}" />


            <TextView
                android:id="@+id/tvLoginUsing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/login_using"
                android:textColor="@color/colorBlack"
                android:textSize="14dp"
                app:font="@{`lato_regular`}" />

            <LinearLayout
                android:id="@+id/rlSocialLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivHomeProfile"
                android:gravity="center"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"
                android:padding="@dimen/dp_10">

                <ImageView
                    android:id="@+id/iv_fb"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_40"
                    android:layout_weight="1"
                    android:background="@drawable/facebook"
                    android:scaleType="fitXY" />

                <ImageView
                    android:id="@+id/iv_google"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_40"
                    android:layout_marginStart="@dimen/dp_30"
                    android:layout_weight="1"
                    android:background="@drawable/google"
                    android:scaleType="fitXY" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tvNew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_2"
                    android:gravity="center"
                    android:text="@string/new_to_yod"
                    android:textColor="@color/colorBlack"
                    android:textSize="14dp"
                    app:font="@{`lato_regular`}" />

                <TextView
                    android:id="@+id/tvPrivacyPolicies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_3"
                    android:layout_toEndOf="@+id/tvNew"
                    android:gravity="center"
                    android:text="@string/sign_up_now"
                    android:textColor="@color/colorLogOut"
                    android:textSize="14dp"
                    app:font="@{`lato_bold`}" />
            </RelativeLayout>


        </LinearLayout>

    </ScrollView>


</layout>