<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:orientation="vertical"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/gradient_profile_background">

                    <ImageView
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="@dimen/dp_5"
                        android:src="@drawable/edit_image_icon"
                        android:visibility="gone"/>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/iv_profile_pic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/profile_picture" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_40"
                        android:layout_alignTop="@+id/iv_profile_pic"
                        android:layout_alignEnd="@+id/iv_profile_pic"
                        android:padding="@dimen/dp_5">

                        <ImageView
                            android:layout_width="@dimen/dp_24"
                            android:layout_height="@dimen/dp_30"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="0dp"
                            android:src="@drawable/change_pic" />
                    </RelativeLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/tvForgotPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="John Rao"
                    android:textColor="@color/colorBlack"
                    android:textSize="14dp"
                    app:font="@{`lato_bold`}" />/>
            </LinearLayout>

        </FrameLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvPreviewReport"
            android:layout_below="@+id/frame">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/edtFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/full_name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords|textNoSuggestions"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:padding="@dimen/dp_15"
                    android:scrollHorizontally="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="14dp"
                    app:font="@{`lato_regular`}"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/dp_0"
                    android:background="@color/colorLightGrey" />


                <EditText
                    android:id="@+id/edtGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/gender"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords|textNoSuggestions"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:padding="@dimen/dp_15"
                    android:scrollHorizontally="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="14dp"
                    app:font="@{`lato_regular`}"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/dp_0"
                    android:background="@color/colorLightGrey" />

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_2"
                    android:background="@null"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:padding="@dimen/dp_15"
                    android:scrollHorizontally="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="14dp"
                    app:font="@{`lato_regular`}" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/dp_0"
                    android:background="@color/colorLightGrey" />

                <EditText
                    android:id="@+id/edtMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/mobile_number"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:padding="@dimen/dp_15"
                    android:scrollHorizontally="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="14dp"
                    app:font="@{`lato_regular`}"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/dp_0"
                    android:background="@color/colorLightGrey" />

                <EditText
                    android:id="@+id/edtDOB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/birth_date"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:padding="@dimen/dp_15"
                    android:scrollHorizontally="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="14dp"
                    app:font="@{`lato_regular`}"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/dp_0"
                    android:background="@color/colorLightGrey" />


                <TextView
                    android:id="@+id/tvLogout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_40"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:layout_marginBottom="@dimen/dp_40"
                    android:background="@drawable/drawable_rectangle_logout_btn"
                    android:gravity="center"
                    android:text="Change Password"
                    android:textAllCaps="true"
                    android:textColor="@color/colorLogOut"
                    android:textSize="14dp"
                    app:font="@{`lato_bold`}" />
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/tvPreviewReport"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_alignParentBottom="true"
            android:background="@drawable/drawable_gradient_line"
            android:gravity="center"
            android:text="SAVE DETAILS"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_16"
            app:font="@{`lato_bold`}" />

    </RelativeLayout>
</layout>